--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.13.4",
     "@tanstack/react-query-devtools": "^5.13.5",
     "axios": "^1.6.2",
+    "md5": "^2.3.0",
     "react": "^18.2.0",
     "react-calendar": "^4.7.0",
     "react-datepicker": "^4.25.0",
@@ -24,6 +25,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/md5": "^2.3.5",
     "@types/react": "^18.2.43",
     "@types/react-datepicker": "^4.19.4",
     "@types/react-dom": "^18.2.17",
